--- a/index.css
+++ b/index.css
@@ -1,20 +1,35 @@
 html {
     background: url("florian-olivo-unsplash.jpg") center no-repeat;
     background-size: cover;
-    min-height: 100vh;
+    height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+height: 100%;
+    justify-content: center;
     align-items: center;
-    width:90%;
+    margin: 0;
 }
 
-#mainContainer {
-    background: rgba(255,255,255,0.7);
-    box-shadow: 0 0 0 10px rgba(0.0,0.0,0.0,0.15);
-    
+#mia_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#mia_img {
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+}
+
+#mia_msg {
+    background-color: rgba(255, 255, 255, 0.431);
+    text-align: center;
+    font-size: larger;
+    width: 400px;
+    margin-top: 15px;
+    padding: 10px;
 }
