--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html {
-    background: url("florian-olivo-unsplash.jpg") center no-repeat;
+    background: url("images/florian-olivo-unsplash.jpg") center no-repeat;
     background-size: cover;
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
@@ -10,26 +10,28 @@ body {
     height: 100%;
     justify-content: center;
     align-items: center;
-    margin: 0;
+    margin: auto 0;
 }
 
-#mia_container {
+#emmet_container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#mia_img {
+#emmet_img {
     border-radius: 50%;
-    width: 300px;
-    height: 300px;
+    width: 320px;
+    height: 450px;
 }
 
-#mia_msg {
-    background-color: rgba(255, 255, 255, 0.431);
+#emmet_msg {
+    background-color: rgba(27, 192, 27, 0.431);
     text-align: center;
     font-size: larger;
+    color: aliceblue;
     width: 400px;
     margin-top: 15px;
+    margin-bottom: 15px;
     padding: 10px;
 }
